# thetube

./: .gitignore  AI_POLICY.md  Cargo.toml  LICENSE  RACE_WINDOWS.md  README.md  TODO.md  ai.txt
admin-ui/: layout.html
admin-ui/css/: admin.css
admin-ui/js/: admin.js  api.js
admin-ui/pages/: 404.html  connections.html  overview.html  subscriptions.html
benches/: .gitignore  Cargo.toml
crates/admin/: Cargo.toml
crates/admin/src/: auth.rs  lib.rs  routes.rs  server.rs
crates/admin/templates/: layout.html
crates/admin/templates/pages/: 404.html  connections.html  overview.html  subscriptions.html
crates/broker/: Cargo.toml
crates/broker/src/: coordination.rs  lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/fibril/: Cargo.toml
crates/fibril/src/: main.rs
crates/fibril/tests/: broker_tests.rs  storage_tests.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/v1/: client.rs  frame.rs  handler.rs  helper.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  observable_storage.rs  rocksdb_store.rs  stroma_store.rs
crates/tui-example/: Cargo.toml
crates/tui-example/src/: main.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
