[workspace]
members = [
    "crates/util",
    "crates/protocol",
    "crates/storage",
    "crates/broker",
    "crates/fibril",
    "crates/tui-example",
    "benches", "crates/client",
]

resolver = "2"

[workspace.metadata.sovereignty]
ai-training = "prohibited"
policy-url = "https://github.com/axmouth/fibril/blob/main/AI_POLICY.md"
