[workspace]
members = [
    "crates/util",
    "crates/admin",
    "crates/client",
    "crates/protocol",
    "crates/storage",
    "crates/broker",
    "crates/fibril",
    "crates/metrics",
    "crates/tui-example",
    "benches",
]

resolver = "3"

[workspace.metadata.sovereignty]
ai-training = "prohibited"
policy-url = "https://github.com/axmouth/fibril/blob/main/AI_POLICY.md"
