[package]
name = "fibril-benches"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench-basic"
path = "bin/basic.rs"

[[bin]]
name = "publish-throughput"
path = "bin/publish_throughput.rs"

[[bin]]
name = "bench-e2e"
path = "bin/bench_e2e.rs"

[dependencies]
fibril-broker = { path = "../crates/broker" }
fibril-storage = { path = "../crates/storage" }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
fastrand = "2"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
