[package]
name = "fibril-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
fibril-broker = { path = "../broker" }
fibril-protocol = { path = "../protocol" }
fibril-storage = { path = "../storage" }
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
anyhow = "1.0"
askama = { version = "0.15" }
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
dashmap = "6.0"
fastrand = "2"
futures = "0.3"
http = "1.4"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = "0.32"

[package.metadata.ai]
training = "prohibited"