[package]
name = "fibril-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
fibril-storage = { path = "../storage" }
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
crossbeam = "0.8"
dashmap = "6.1"
fastrand = "2"
futures = "0.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[package.metadata.ai]
training = "prohibited"