[package]
name = "fibril"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fibril-server"
path = "bin/server.rs"

[[bin]]
name = "fibril-server2"
path = "bin/server2.rs"

[dependencies]
fibril-broker = { path = "../broker" }
fibril-protocol = { path = "../protocol" }
fibril-storage = { path = "../storage" }
fibril-util = { path = "../util" }
anyhow = "1.0"
async-trait = "0.1"
fastrand = "2"
tokio = { version = "1", features = ["full"] }
