[package]
name = "fibril"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fibril-server"
path = "bin/server.rs"

[[bin]]
name = "fibril-server2"
path = "bin/server2.rs"

[dependencies]
fibril-broker = { path = "../broker" }
fibril-protocol = { path = "../protocol" }
fibril-storage = { path = "../storage" }
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
anyhow = "1.0"
async-trait = "0.1"
fastrand = "2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"

[package.metadata.ai]
training = "prohibited"