[package]
name = "fibril-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
fibril-broker = { path = "../broker" }
fibril-storage = { path = "../storage" }
fibril-util = { path = "../util" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
dashmap = "6.1"
fastrand = "2"
futures = "0.3"
postcard = { version = "1", features = ["alloc"] }
rmp-serde = "1.3"
rocksdb = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
