[package]
name = "fibril-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
# stroma-core = { git = "https://github.com/Axmouth/keratin.git", branch = "main" }
stroma-core = { path = "../../../stroma/stroma/core" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
rocksdb = { version = "0.24.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
walkdir = "2.5"

[package.metadata.ai]
training = "prohibited"
