[package]
name = "fibril-tui-example"
version = "0.1.0"
edition = "2024"

[dependencies]
fibril-broker = { path = "../broker" }
fibril-protocol = { path = "../protocol" }
fibril-storage = { path = "../storage" }
fibril-util = { path = "../util" }
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fastrand = "2"
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }

[package.metadata.ai]
training = "prohibited"